--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ agency: dems
 year: 2017
 title: dems
 email: info@dems-agency.com
-address: Jardines de veracruz, del restaurante Tauro 2 cuadras abajo y 15 varas al oeste, casa  I16
+address: 'Jardines de veracruz, del restaurante Tauro 2 cuadras abajo y 15 varas al oeste, casa  I16'
 phone: tel:+50522505978
 website: http://www.dems-agency.com
 facebook: https://www.facebook.com/ demsagency
